--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>dispatcher</module>
+    <module>common-rabbitmq</module>
   </modules>
 
   <properties>
@@ -22,12 +23,17 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.5.2</version>
   </parent>
-
   <dependencies>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
