--- a/dispatcher/pom.xml
+++ b/dispatcher/pom.xml
@@ -15,7 +15,6 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <telegrambot.starter.version>6.1.0</telegrambot.starter.version>
   </properties>
 
   <dependencies>
@@ -33,6 +32,10 @@
       <groupId>ru.mark</groupId>
       <artifactId>common-rabbitmq</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
     </dependency>
   </dependencies>
 
