--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=7070
 
 bot.name=babushkin_pogreb_mark2_bot
 bot.token=6366875778:AAF4FxVw2e_pss-JrOq78l7zx9yV_iZx2oA
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=userok
+spring.rabbitmq.password=p@ssw0rd
