добавление файлового хранилища

--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5431/pogreb
 spring.datasource.username=userok
 spring.datasource.password=p@ssw0rd
 spring.jpa.generate-ddl=true
+
+token=6366875778:AAF4FxVw2e_pss-JrOq78l7zx9yV_iZx2oA
+service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
+service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
