доработка чат бота

--- a/rest-service/src/main/resources/application.properties
+++ b/rest-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5431/pogreb
 spring.datasource.username=userok
 spring.datasource.password=p@ssw0rd
 spring.jpa.generate-ddl=true
+
+link.address=127.0.0.1:7076
+salt=d!E=dLFxzOe7tSNhj+m8
