--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.generate-ddl=true
 token=6366875778:AAF4FxVw2e_pss-JrOq78l7zx9yV_iZx2oA
 service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
 service.file_storage.uri=https://api.telegram.org/file/bot{token}/{filePath}
+service.mail.uri=http://127.0.0.1:8086/mail/send
+
+
+link.address=127.0.0.1:7076
+salt=d!E=dLFxzOe7tSNhj+m8
