--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
     <module>node</module>
       <module>common-jpa</module>
       <module>rest-service</module>
+      <module>common-utils</module>
+      <module>common-utils</module>
+    <module>mail-service</module>
+    <module>mail-service</module>
   </modules>
 
   <properties>
