рефакторинг + переход на webhookи

--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -3,6 +3,9 @@ server.port=7070
 bot.name=babushkin_pogreb_mark2_bot
 bot.token=6366875778:AAF4FxVw2e_pss-JrOq78l7zx9yV_iZx2oA
 
+bot.uri=https://sour-numbers-melt.loca.lt
+server.ssl.enabled=false
+
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=userok
